--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,34 @@
-.c1{
-    height:40px;
+body{
+    background:pink;
+}
+#header{
+   text-align:center;
+   font-size:40px;
+    height:60px;
+    background:grey; 
+    padding:20px;
+}
+#instructions{
+    
+    text-align:center;
+    height:200px;
+    width:500px;
+    background:green;
+}
+
+#crystals{
+    background:blue;
+    height:70px;
+    width:220px;
+}
+
+.images{
+    height:60px;
     width:40px;
-};
-.c2{
-    height:40px;
-    width:40px;
-};
-.c3{
-    height:40px;
-    width:40px;
-};
-.c4{
-    height:40px;
-    width:40px;
-};
+    padding:6px;
+}
+#goal{
+    height:60px;
+    width:60px;
+    background:#fff;
+}
