--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 body{
-    background:pink;
+    background-image:url(https://images8.alphacoders.com/694/694087.jpg);
+    
+}
+.clearfix::after{
+    clear:both;
+    content:"";
+    display:block;
 }
 #header{
    text-align:center;
@@ -7,28 +13,68 @@ body{
     height:60px;
     background:grey; 
     padding:20px;
+    background-image:url(https://image.shutterstock.com/z/stock-photo-a-pile-of-gold-nuggets-or-gold-ore-isolated-on-white-background-precious-stone-or-lump-of-golden-1220282311.jpg);
+    background-size:200px, 1000px;
+    text-shadow: 4px 4px white;
 }
 #instructions{
-    
+    margin-left:325px;
     text-align:center;
     height:200px;
     width:500px;
     background:green;
+    padding-top:6px;
+    margin-top:10px;
 }
 
 #crystals{
-    background:blue;
+    /* background:blue; */
     height:70px;
-    width:220px;
+    width:350px;
+    margin:15px 0 0 387px;
+    
 }
 
 .images{
     height:60px;
     width:40px;
-    padding:6px;
+    padding-left:38px;
+    padding-top:6px;
+}
+#haul{
+    height:52px;
+    width:60px;
+    background:green;
+    margin-left:526px;
+    text-align:center;
+    font-size:20px;
+    margin-bottom:6px;
+
+}
+#score{
+    text-align:center;
+}
+#wins-losses{
+    background: teal;
+    height:70px;
+    width:60px;
+    margin-left:526px;
+    text-align:center;
+    margin-bottom:20px;
+    margin-top:6px;
+
+}
+#myHaul{
+    height:45px;
+    width:100px;
+    background:lightseagreen;
+    margin-left:506px;
+    margin-top:6px;
+    text-align:center;
+    font-size:20px;
+    margin-bottom:6px;
 }
 #goal{
-    height:60px;
-    width:60px;
-    background:#fff;
+    margin-bottom:10px;
 }
+
